# flutter_libmwc

./: .gitignore  .gitmodules  README.md  libmwc_wallet.h
android/: build.gradle
example/android/app/: build.gradle
example/ios/Runner/: Info.plist  Runner-Bridging-Header.h
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/models/: test_result.dart
example/lib/services/: ffi_test_service.dart  wallet_service.dart
example/lib/views/: create_wallet_view.dart  open_wallet_view.dart  restore_wallet_view.dart  slatepack_demo_view.dart  test_runner_view.dart  transaction_view.dart  wallet_home_view.dart  wallet_info_view.dart
example/macos/: Podfile
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc
ios/: flutter_libmwc.podspec
ios/Classes/: FlutterLibmwcPlugin.h  FlutterLibmwcPlugin.m  SwiftFlutterLibmwcPlugin.swift
lib/: lib.dart  mwc.dart
macos/: flutter_libmwc.podspec
macos/Classes/: FlutterLibmwcPlugin.h  FlutterLibmwcPlugin.swift
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: lib.rs  slatepack.rs
scripts/ios/: build_all.sh
scripts/linux/: build_all.sh
scripts/macos/: build_all.sh
scripts/windows/: build_all.sh
test/: flutter_libmwc_test.dart
windows/: CMakeLists.txt
windows/include/flutter_libmwc/: flutter_libmwc_plugin_c_api.h
