[package]
name = "mwc-wallet"
version = "0.1.0"
edition = '2021'

[dependencies]
clap = { version = "2.31", features = ["yaml"] }
rpassword = "2.0.0"
ctrlc = { version = "3.1", features = ["termination"] }
jni = { version = "0.10.2", default-features = false, optional = true }
failure = "0.1.8"
failure_derive = "0.1.8"
prettytable-rs = "0.7"
log = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
simplelog = "^0.7.4"
openssl = { version = "0.10", features = ["vendored"] }
zeroize = { version = "1.1.0", features = ["derive"] }
rand = "0.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rustc-serialize = "0.3.24"
android_logger = "0.11.0"
chrono = "0.4.24"
ed25519-dalek = "1.0.0-pre.4"

mwc_keychain = "5.3.5"
mwc_util = { git = "https://github.com/cypherstack/mwc-node", subdir = "util" }
mwc_core = { git = "https://github.com/cypherstack/mwc-node", subdir = "core" }

mwc_wallet_api = { git = "https://github.com/cypherstack/mwc-wallet", subdir = "api", package = "grin_wallet_api" }
mwc_wallet_impls = { git = "https://github.com/cypherstack/mwc-wallet", subdir = "impls", package = "grin_wallet_impls" }
mwc_wallet_libwallet = { git = "https://github.com/cypherstack/mwc-wallet", subdir = "libwallet", package = "grin_wallet_libwallet" }
mwc_wallet_config = { git = "https://github.com/cypherstack/mwc-wallet", subdir = "config", package = "grin_wallet_config" }
mwc_wallet_util = { git = "https://github.com/cypherstack/mwc-wallet", subdir = "util", package = "grin_wallet_util" }
mwc_wallet_controller = { git = "https://github.com/cypherstack/mwc-wallet", subdir = "controller", package = "grin_wallet_controller" }

url = "2.1.0"
futures = "0.3.15"
tokio-tungstenite = "0.21.0"
tungstenite = { version = "0.21", default-features = false }
tokio = { version = "0.2.0", features = ["full"]}
websocket = "0.21.1"
ws = "0.9.2"
ffi_helpers = "0.3.0"
anyhow = "1.0.69"


[lib]
name = "mwc_wallet"
crate-type = ["staticlib", "cdylib"]

[patch.crates-io]
liblmdb-sys = { git = "https://github.com/i1skn/lmdb-rs" }

[patch."https://github.com/mwcproject/rust-libp2p"]
libp2p = { git = "https://github.com/cypherstack/rust-libp2p", branch = "patch" }

[patch."https://github.com/mwcproject/wagyu-ethereum"]
wagyu-ethereum = { git = "https://github.com/cypherstack/wagyu-ethereum", branch = "patch" }

[patch."https://github.com/mwcproject/rust-bch"]
bch = { git = "https://github.com/cypherstack/rust-bch", branch = "patch" }

[patch."https://github.com/mwcproject/rust-bitcoin"]
bitcoin = { git = "https://github.com/cypherstack/rust-bitcoin", branch = "patch" }

[patch."https://github.com/mwcproject/wagyu-model"]
wagyu-model = { git = "https://github.com/cypherstack/wagyu-model", branch = "patch" }

[patch."https://github.com/mwcproject/rust-web3"]
web3 = { git = "https://github.com/cypherstack/rust-web3", branch = "patch" }

[patch."https://github.com/mwcproject/librustzcash"]
zcash_primitives = { git = "https://github.com/cypherstack/librustzcash", branch = "patch", subdir = "zcash_primitives" }

[patch."https://github.com/mwcproject/mwc-node"]
grin_api = { git = "https://github.com/cypherstack/mwc-node", branch = "patch", subdir = "api" }
grin_chain = { git = "https://github.com/cypherstack/mwc-node", branch = "patch", subdir = "chain" }
grin_core = { git = "https://github.com/cypherstack/mwc-node", branch = "patch", subdir = "core" }
grin_keychain = { git = "https://github.com/cypherstack/mwc-node", branch = "patch", subdir = "keychain" }
grin_p2p = { git = "https://github.com/cypherstack/mwc-node", branch = "patch", subdir = "p2p", features = ["libp2p"] }
grin_store = { git = "https://github.com/cypherstack/mwc-node", branch = "patch", subdir = "store" }
grin_util = { git = "https://github.com/cypherstack/mwc-node", branch = "patch", subdir = "util" }
grin_config = { git = "https://github.com/cypherstack/mwc-node", branch = "patch", subdir = "config" }
grin_pool = { git = "https://github.com/cypherstack/mwc-node", branch = "patch", subdir = "pool" }
grin_servers = { git = "https://github.com/cypherstack/mwc-node", branch = "patch", subdir = "servers" }
